	bjm.segondvonbanchet AT telfort.nl for pointing this out)
- Fixed to show the real hostname in the emailreports.
- Fixed the 'int' graph in order to be compatible with Excito B3 product.
	(thanks to Patrick Fallberg, patrick AT fallberg.net for pointing this out)
- Fixed to correctly sanitize the input string in the built-in HTTP server
  which led a number of security vulnerabilities. [#30]
- Small fixes and typos.



3.3.1  - 21-Nov-2013
====================
- Fixed to correctly sanitize the input string in the built-in HTTP server
  which led a number of security vulnerabilities. [#30]


3.3.0  - 12-Aug-2013
====================
- Added a complete statistical Wowza Media Server graph.
	(suggested by Daniele Ilardo, kkstyle21 AT gmail.com)
- Added a complete statistical PHP-APC graph.
	(suggested by Petr Švec, petr.svec AT pak.izscr.cz)
- Reimplemented the alarm signal handler placing it inside the main loop in
  order to be able to control the timeouts in the 'disk' graph (and others).
  This should avoid a complete freeze if the network goes down when monitoring
  NFS filesystems. [#10]
- Reimplemented the 'theme' option.
- Implemented a complete email reporting mechanism. [#11]
- Added the label 'Total' in the main graph of 'apache'.
- Added a new option called 'show_gaps' to be able to see the gaps produced by
  missing data in graphs.
	(suggested by Skibbi, skibbi AT gmail.com)
- Add a check during the initialization of the 'nvidia' graph, to test for the
  existence of the 'nvidia-smi' command.
- Add a check during the initialization of the 'nfss' graph, to test if there
  is the '/proc/net/rpc/nfsd' file.
- Add a check during the initialization of the 'nfsc' graph, to test if there
  is the '/proc/net/rpc/nfs' file.
- Added the option 'url_prefix' in the 'traffacct' graph.
- Added the option 'global_zoom' to all graphs.
- Fixed a bug that prevented from seeing stats in the 'nfss' graph.